@@ -8,6 +8,8 @@ git-annex (4.20131025) UNRELEASED; urgency=low
   * directory, webdav: Fix bug introduced in version 4.20131002 that
     caused the chunkcount file to not be written. Work around repositories
     without such a file, so files can still be retreived from them.
+  * assistant: Automatically repair damanged git repository, if it can
+    be done without losing data.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 26 Oct 2013 12:11:48 -0400
 
